[package]
name = "moni-code"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"
reqwest = {version="0.11.23", features=["json", "cookie_crate", "cookie_store", "cookies", ]}
serde = {version = "1.0.195", features=["derive"]}
sea-orm = { version = "0.12.12", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-json", ] }
serde_json = "1.0.111"
tokio ={ version = "1.35.1", features=["macros", "rt-multi-thread"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
